<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DataActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/icon"
            android:padding="10dp"
            android:src="@drawable/imgtest" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/cholder"
            android:layout_below="@+id/icon"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cname"
                android:text="@string/loading"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="23sp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cholder"
            android:layout_marginTop="10dp"
            android:fillViewport="true"
            android:paddingBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/last_updated"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/price_usd"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/price_btc"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/h_volume_usd"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/market_cap_usd"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/available_supply"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/total_supply"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/max_supply"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/percent_change_1h"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/percent_change_24h"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:text="@string/percent_change_7d"
                        android:padding="10dp"
                        android:layout_weight="1"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:id="@+id/lu"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:id="@+id/pud"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:text="@string/loading"
                        android:id="@+id/pbtc"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:id="@+id/hvu"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:id="@+id/mcu"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:id="@+id/as"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:id="@+id/ts"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:id="@+id/ms"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:id="@+id/ci1h"
                        android:text="@string/loading"
                        android:padding="10dp"

                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:id="@+id/ci24h"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="left"
                        android:text="@string/loading"
                        android:padding="10dp"
                        android:id="@+id/ci7d"
                        android:layout_weight="1"/>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            app:srcCompat="@drawable/rfsh"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

</LinearLayout>
